--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,6 +18,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -25,6 +26,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><button class="btn btn-outline-danger"><form method="POST" action="/urls/9sm5xK/delete">Delete</form></button></td>
           </tr>
         <% } %>
       </tbody>
