figuring out how delete works

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,7 +26,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><button class="btn btn-outline-danger"><form method="POST" action="/urls/9sm5xK/delete">Delete</form></button></td>
+            <td><button class="btn btn-outline-danger"><form method="POST" action="/urls/9sm5xK/delete"><a href="/urls/delete">Delete</a></form></button></td>
           </tr>
         <% } %>
       </tbody>
