Edit feature added

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,6 +27,11 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
+              <form action="/urls/<%= url %>" method="GET">
+              <button class="btn btn-outline-primary">edit</button>
+              </form>
+            </td>
+            <td>
               <form method="POST" action="/urls/<%= url %>/delete">
                 <button class="btn btn-outline-danger"> Delete
                 </button>
