--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,6 +9,19 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <div class="navbar-nav ml-auto">
+        <% if (!username) { %>
+        <form class="form-inline" action="/login" method="post">
+          <input class="form-control mr-sm-2" type="text" name="username" placeholder="username">
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="submit">Login</button>
+        </form>
+        <% } else {%>
+          <span class="font-weight-bold" style="margin: auto 1rem;">Logged in as: <%= username %></span>
+          <form class="form-inline" action="/logout" method="post">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="logout">Logout</button>
+          </form>
+        <% } %>
+      </div>
     </div>
   </nav>
 </header>
