Added functionality to log in, or register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,5 +14,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>        
       </form>
     </main>
+  <h3>login</h3>
+  <a href="/login">login</a>
 </body>
 </html>
