--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,11 +6,12 @@
   <title>Login</title>
 </head>
 <body>
-  <%- include('partials/_header') %>
   <h3>Login</h3>
   <form class="form-inline" action="/login" method="post">
   <input class="form-control mr-sm-2" type="email" name="email" placeholder="example@mail.com">
   <input class="form-control mr-sm-2" type="password" name="password" placeholder="password">
   <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="submit">Login</button>
+  <h3>Register</h3>
+  <a href="register">register</a>
 </body>
 </html>
