--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,10 +10,13 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div class="navbar-nav ml-auto">
-          <span class="font-weight-bold" style="margin: auto 1rem;">Logged in as: <%= email %></span>
-          <form class="form-inline" action="/logout" method="post">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="logout">Logout</button>
-          </form>
+      <% if(!email) { %>
+        <a href="/register" class="nav-item nav-link">Register</a>
+        <a href="/login" class="nav-item nav-link">Login</a>
+      <% } %>
+        <form class="form-inline" action="/logout" method="post">
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="logout">Logout</button>
+        </form>
       </div>
     </div>
   </nav>
