user now can must login or register

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div class="navbar-nav ml-auto">
-      <% if(!email) { %>
+      <% if(userId) { %>
         <a href="/register" class="nav-item nav-link">Register</a>
         <a href="/login" class="nav-item nav-link">Login</a>
       <% } %>
