--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,13 +10,15 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div class="navbar-nav ml-auto">
-      <% if(userId) { %>
+      <% if(!email) { %>
         <a href="/register" class="nav-item nav-link">Register</a>
         <a href="/login" class="nav-item nav-link">Login</a>
-      <% } %>
+      <% } else { %>
+        <span><b>Logged in as: <%= email %></b></span>
         <form class="form-inline" action="/logout" method="post">
           <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="logout">Logout</button>
         </form>
+      <% } %> 
       </div>
     </div>
   </nav>
