--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,7 +9,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <%- include('partials/_header') %>
+  <%- include('partials/_header')  %>
 
   <main style="margin: 1em;">
     <h3>My URLs</h3>
@@ -18,6 +18,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
