Pre final stages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,15 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>Login</title>
 </head>
 <body>
-  <h3>Login</h3>
-  <form class="form-inline" action="/login" method="post">
-  <input class="form-control mr-sm-2" type="email" name="email" placeholder="example@mail.com">
-  <input class="form-control mr-sm-2" type="password" name="password" placeholder="password">
-  <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="submit">Login</button>
-  <h3>Register</h3>
-  <a href="register">register</a>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+      <a class="navbar-brand" href="/urls">TinyApp</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+          <a href="/register" class="nav-item nav-link">Register</a>
+          <a href="/login" class="nav-item nav-link">Login</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+    <main style="margin: 1em;">
+      <h3>Login</h3>
+      <form class="form-inline" action="/Login" method="POST">
+        <input type="email" name="email" placeholder="example@mail.com">
+        <input type="password" name="password" placeholder="example password">
+        <button type="submit" class="btn btn-primary">Submit</button>        
+      </form>
+    </main>
 </body>
 </html>
