--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,7 +17,7 @@
       <div class="card-header"><h1>Edit</h1></div>
       <div class="card-body">
         <form action="/urls/<%= shortURL %>/edit" method="post">
-          <label for="editURL">New URL:</label>
+          <label for="editURL">Edit URL: </label>
           <input type="text" name="longURL">
           <button class="btn btn-primary">Submit</button>
         </form>
