--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>Index</title>
 </head>
 <body>
-  <ul>
-    <li>
-      <a href="/register">register</a>
-    </li>
-    <li>
-      <a href="/login">Login</a>
-    </li>
-  </ul>
+  <header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls">TinyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a href="/register" class="nav-item nav-link">Register</a>
+        <a href="/login" class="nav-item nav-link">Login</a>
+      </div>
+    </div>
+  </nav>
+</header>
 </body>
 </html>
