--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div class="navbar-nav ml-auto">
-      <% if(!email) { %>
+      <% if(email) { %>
         <span>Logged in as: <%= email %></span>
         <form class="form-inline" action="/logout" method="post">
           <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="logout">Logout</button>
