--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,7 +28,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
-              <form action="/urls/<%= url %>" method="GET">
+              <form action="/urls/<%= url %>/edit" method="GET">
               <button class="btn btn-outline-primary">edit</button>
               </form>
             </td>
