--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,6 +18,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">View</th>
           <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
@@ -26,7 +27,12 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url] %></td>            
+            <td>
+              <form action="/urls/<%= url %>/" method="GET">
+              <button class="btn btn-outline-warning">View</button>
+            </form>
+            </td>
             <td>
               <form action="/urls/<%= url %>/edit" method="GET">
               <button class="btn btn-outline-primary">edit</button>
